Title: 1차원 폭발 게임, Time: 0ms, Memory: 0MB, Status: Wrong Answer - Codetree